Bug 1928458 - Make local font name lookup prefer face [postscript/full] names that are more similar to their family name, in case of duplicates.. r=dshin

Differential Revision: https://phabricator.services.mozilla.com/D228340